# LuaVS

./: .gitignore  .luarc.json  CMakeLists.txt  LICENSE  README.md
assets/presets/: bars_eq.lua  cubes_3d.lua  knob_grid.lua  knob_wave.lua  onset_quadrants.lua  radial_bands.lua  spline_eq.lua
lua_typings/: draw_api.lua
src/: main.cpp
src/audio/: AudioCapture.cpp  AudioCapture.h
src/core/: Config.h  FeatureExtractor.cpp  FeatureExtractor.h  FftProcessor.cpp  FftProcessor.h  InputManager.cpp  InputManager.h  LuaEngine.cpp  LuaEngine.h
src/graphics/: Renderer.cpp  Renderer.h
src/tests/: mcp3008_test.cpp  test_fft.cpp  test_scan.cpp
